# game1

./: .gitignore  jwp_readme.md  readme.md
.claude/: settings.local.json
MyGame-Android/: CMakeLists.txt  build.gradle
MyGame-Android/app/: build.gradle  proguard-rules.pro
MyGame-Android/app/jni/: Application.mk  CMakeLists.txt  SDL
MyGame-Android/app/jni/src/: Android.mk  CMakeLists.txt
MyGame-Android/app/src/main/: AndroidManifest.xml
MyGame-Android/app/src/main/java/org/libsdl/app/: HIDDeviceBLESteamController.java  HIDDeviceManager.java  HIDDeviceUSB.java  SDL.java  SDLActivity.java  SDLAudioManager.java  SDLControllerManager.java  SDLDummyEdit.java  SDLInputConnection.java  SDLSurface.java
MyGame-Android/app/src/main/res/values/: colors.xml  styles.xml
MyGame-Android/gradle/wrapper/: gradle-wrapper.properties
MyGame-Windows/: CMakeLists.txt
assets/levels/: level1.json
scripts/: run-android.bat  run-android.sh  run-windows.bat  run-windows.sh  test.bat  test.sh
src/: Character1.cpp  Character1.h  DisplayManager.cpp  DisplayManager.h  FPSCounter.cpp  FPSCounter.h  GameOverScene.cpp  GameOverScene.h  Input.cpp  Input.h  IntroScene.cpp  IntroScene.h  Level.cpp  Level.h  LevelIntroScene.cpp  LevelIntroScene.h  Lives.cpp  Lives.h  PerformanceMonitor.cpp  PerformanceMonitor.h  PlayingScene.cpp  PlayingScene.h  SceneManager.h  Score.cpp  Score.h  main.cpp
tests/: CMakeLists.txt  test_character1.cpp  test_displaymanager.cpp  test_level.cpp  test_lives.cpp  test_playingscene.cpp  test_scenemanager.cpp  test_score.cpp
